# GEOtiled

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml
configureable_performance_analysis/: tools.py
conus_data/: Visualize_CONUS.ipynb  config10m.yaml  config30m.yaml  dashboard.py  tools.py
dashboard/: Dockerfile  README.md  config.yaml  dashboard.py  environment.yaml  index.html  tools.py
data/: index.html
demo/: SAGA_Tile_Timing_Test.ipynb  demo.ipynb  oop_demo.ipynb
dev/: Extensive_Test.ipynb
docs/: Function_Docs.md  dashboard.md  data.md  functions.md  index.md  library.md
escience_performance_analysis/: eScience_Results.ipynb  tools.py
functions/: index.html
geotiled/: setup.cfg
geotiled/src/: geotiled.py  geotiled_oop.py  saga_wrapper.py
geotiled/src/codes/: data_codes.txt  grass_codes.txt  parameter_codes.txt  region_codes.txt  saga_codes.txt
geotiled/src/geotiled.egg-info/: PKG-INFO  requires.txt
performance_analysis/: README.md
saga/: GEOtiledWithSAGA.ipynb  GEOtiled_Testing.ipynb  README.md  Visualize_Tests.ipynb  compile_nodata_stats.py  crop_test.py  geotiledsaga.py  geotiledsaga2.py  geotiledtests.py  mosaic_test.py  ntct.py  parameter_sweep_test.py  run_parameter_sweep_test.sh  run_tests.py  run_tile_compute_test.sh  test.py  tile_compute_test.py  visualize_tests.py
search/: search_index.json
somospie_lib/: LICENSE  README.md  setup.cfg
testing/: Accuracy_Test.ipynb  Combined_Optimizations.ipynb  Concurrency_Optimization.ipynb  Crop_Optimization.ipynb  GDAL_vs_SAGA.ipynb  GDAL_vs_SAGA_GEOtiled.ipynb  GEOtiled_Testing.ipynb  Mosaic_Optimization.ipynb  Visualize_Tests.ipynb  accuracy_functions.py  compare_results.py  compute_functions.py  crop_functions.py  (+5 more)
(+212 files in other folders)
