[metadata]
name = geotiled
version = 1.0.0
author = Camila Roa and Jay Ashworth and Gabriel Laboy
author_email = taufer@utk.edu
description = Package with all of the required functions and classes for GEOtiled and its associated workflows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TauferLab/GEOtiled
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:
install_requires =
    numpy
    matplotlib
    tqdm
    pandas
    geopandas
    notebook
    tabulate
    scipy
    wheel
    setuptools>=67
    gdal[numpy]==3.8.4

[options.package_data]
* = *.md

[options.packages.find]
where = src
